--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "80:80/tcp"
     environment:
       TZ: 'Europe/Amsterdam'
-      # WEBPASSWORD: 'set a secure password here or it will be random'
+      WEBPASSWORD: '${WEBPASSWORD}'
     # Volumes store your data between container upgrades
     volumes:
       - './etc-pihole:/etc/pihole'
