--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -19,15 +19,15 @@ ADLISTS_URL="
     https://raw.githubusercontent.com/jdlingyu/ad-wars/master/hosts
 "
 
-; Remote list URL containing exact domains to whitelist
-WHITELIST_URL="
-    https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
-"
+# ; Remote list URL containing exact domains to whitelist
+# WHITELIST_URL="
+#     https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
+# "
 
-; Remote list URL containing regex rules for whitelisting
-REGEX_WHITELIST_URL="
+# ; Remote list URL containing regex rules for whitelisting
+# REGEX_WHITELIST_URL="
 
-"
+# "
 
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
