More, more, more

--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -7,6 +7,8 @@
 ADLISTS_URL="
     https://v.firebog.net/hosts/lists.php?type=tick
 
+    https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/adlist/adlists.txt
+
     https://adaway.org/hosts.txt
     https://v.firebog.net/hosts/AdguardDNS.txt
     https://v.firebog.net/hosts/Admiral.txt
@@ -107,6 +109,7 @@ ADLISTS_URL="
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
 BLACKLIST_URL="
+    https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/blacklist/exact-blacklist.txt
     https://raw.githubusercontent.com/DRSDavidSoft/additional-hosts/master/domains/blacklist/adservers-and-trackers.txt
     https://raw.githubusercontent.com/anudeepND/blacklist/master/adservers.txt
     https://raw.githubusercontent.com/DRSDavidSoft/additional-hosts/master/domains/blacklist/adservers-and-trackers.txt
@@ -129,7 +132,16 @@ BLACKLIST_URL="
     https://paulgb.github.io/BarbBlock/blacklists/hosts-file.txt
 "
 
+WHITELIST_URL="
+    https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/whitelist/exact-whitelist.txt
+"
+
+REGEX_WHITELIST_URL="
+    https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/whitelist/regex-whitelist.txt
+"
+
 ; Remote list URL containing regex rules for blacklisting
 REGEX_BLACKLIST_URL="
     https://raw.githubusercontent.com/mmotti/pihole-regex/master/regex.list
+    https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/blacklist/regex-blacklist.txt
 "
