Add huge blocklist

--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -5,7 +5,8 @@
 ; Remote list URL containing list of adlists to import
 ; URLs to single adlists are not supported here!
 ADLISTS_URL="
-    https://v.firebog.net/hosts/lists.php?type=tick
+    https://raw.githubusercontent.com/blocklistproject/Lists/master/everything.txt
+    ttps://v.firebog.net/hosts/lists.php?type=tick
 
     https://raw.githubusercontent.com/slyfox1186/pihole-regex/main/domains/adlist/adlists.txt
 
