--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -6,31 +6,36 @@
 ; URLs to single adlists are not supported here!
 ADLISTS_URL="
     https://raw.githubusercontent.com/blocklistproject/Lists/master/everything.txt
+
     https://v.firebog.net/hosts/lists.php?type=tick
+
     https://raw.githubusercontent.com/Ewpratten/youtube_ad_blocklist/master/blocklist.txt
     https://raw.githubusercontent.com/HenningVanRaumle/pihole-ytadblock/master/googlevideo.com%20domains/adverisment.txt
+
+    https://perflyst.github.io/PiHoleBlocklist/android-tracking.txt
+    https://perflyst.github.io/PiHoleBlocklist/SmartTV.txt
+    https://perflyst.github.io/PiHoleBlocklist/SmartTV-AGH.txt
 "
 
 # ; Remote list URL containing exact domains to whitelist
 WHITELIST_URL="
     https://raw.githubusercontent.com/anudeepND/whitelist/master/domains/whitelist.txt
+    
     https://raw.githubusercontent.com/cassis163/pihole-home/main/custom-lists/nl-whitelist.list
-    https://raw.githubusercontent.com/mmotti/pihole-regex/master/whitelist.list
 "
 
 # ; Remote list URL containing regex rules for whitelisting
-REGEX_WHITELIST_URL="
+# REGEX_WHITELIST_URL="
 
-"
+# "
 
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
-BLACKLIST_URL="
+# BLACKLIST_URL="
 
-"
+# "
 
 ; Remote list URL containing regex rules for blacklisting
-REGEX_BLACKLIST_URL="
-    https://raw.githubusercontent.com/mmotti/pihole-regex/master/regex.list
-    https://raw.githubusercontent.com/cassis163/pihole-home/main/custom-lists/youtube-blacklist-regex.list
-"
+# REGEX_BLACKLIST_URL="
+
+# "
