--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -32,9 +32,9 @@ WHITELIST_URL="
 
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
-# BLACKLIST_URL="
-
-# "
+BLACKLIST_URL="
+    https://raw.githubusercontent.com/cassis163/pihole-home/main/custom-lists/blacklist.list
+"
 
 ; Remote list URL containing regex rules for blacklisting
 # REGEX_BLACKLIST_URL="
