--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -15,7 +15,6 @@ ADLISTS_URL="
     https://perflyst.github.io/PiHoleBlocklist/android-tracking.txt
     
     https://perflyst.github.io/PiHoleBlocklist/SmartTV.txt
-    https://perflyst.github.io/PiHoleBlocklist/SmartTV-AGH.txt
 "
 
 # ; Remote list URL containing exact domains to whitelist
@@ -37,6 +36,6 @@ BLACKLIST_URL="
 "
 
 ; Remote list URL containing regex rules for blacklisting
-# REGEX_BLACKLIST_URL="
-
-# "
+REGEX_BLACKLIST_URL="
+    https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/regex.list
+"
