--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -31,11 +31,7 @@ WHITELIST_URL="
 
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
-BLACKLIST_URL="
-    https://raw.githubusercontent.com/cassis163/pihole-home/main/blacklists/roblox-blacklist.list
-"
+BLACKLIST_URL="https://raw.githubusercontent.com/cassis163/pihole-home/main/blacklists/roblox-blacklist.list"
 
 ; Remote list URL containing regex rules for blacklisting
-REGEX_BLACKLIST_URL="
-    https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/regex.list
-"
+REGEX_BLACKLIST_URL="https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/regex.list"
