Allow roblox for once...

--- a/etc-pihole-updatelists/pihole-updatelists.conf
+++ b/etc-pihole-updatelists/pihole-updatelists.conf
@@ -26,7 +26,7 @@ WHITELIST_URL="
     https://raw.githubusercontent.com/cassis163/pihole-home/main/whitelists/npo-start-whitelist.list
     https://raw.githubusercontent.com/cassis163/pihole-home/main/whitelists/microsoft-whitelist.list
     https://raw.githubusercontent.com/cassis163/pihole-home/main/whitelists/facebook-messenger-whitelist.list
-    https://raw.githubusercontent.com/cassis163/pihole-home/main/whitelist/samsung-smart-tv.list
+    https://raw.githubusercontent.com/cassis163/pihole-home/main/whitelists/samsung-smart-tv.list
 "
 
 # ; Remote list URL containing regex rules for whitelisting
@@ -36,7 +36,7 @@ WHITELIST_URL="
 
 ; Remote list URL containing exact domains to blacklist
 ; This is specifically for handcrafted lists only, do not use regular blocklists here!
-BLACKLIST_URL="https://raw.githubusercontent.com/cassis163/pihole-home/main/blacklists/roblox-blacklist.list"
+; BLACKLIST_URL="https://raw.githubusercontent.com/cassis163/pihole-home/main/blacklists/roblox-blacklist.list"
 
 ; Remote list URL containing regex rules for blacklisting
 REGEX_BLACKLIST_URL="https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/regex.list"
